# f1-tcs

./: .gitignore  CHANGELOG.md  README.md  SetupOnWindows.md  UsingASCOMSimulator.md  main.py  pyproject.toml  requirements.txt  start-server.sh
docs/: RegardingF1.md  UsingASCOMSimulator.md
src/f1_tcs/: __init__.py  app.py  ascii.py  ascom.py  config.yaml  dependencies.py  tools.py
src/f1_tcs/protocols/: __init__.py  ascii.py  ascom.py
src/f1_tcs/routers/: ascii.py  ascom.py  status.py
widgets/: misc.py  target.py
